--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -1038,7 +1038,7 @@
                 <div class="card card-round">
                   <div class="card-body">
                     <div class="card-head-row card-tools-still-right">
-                      <div class="card-title">Staff</div>
+                      <div class="card-title">Customers</div>
                       <div class="card-tools">
                         <div class="dropdown">
                           <button
@@ -1065,7 +1065,7 @@
                       </div>
                     </div>
                     <div class="card-list py-4">
-                      <div class="item-list">
+                      <!-- <div class="item-list">
                         <div class="avatar">
                           <img
                             src="{% static 'web/web_dashboard/assets/img/jm_denis.jpg' %}"
@@ -1083,7 +1083,7 @@
                         <button class="btn btn-icon btn-link btn-danger op-8">
                           <i class="fas fa-ban"></i>
                         </button>
-                      </div>
+                      </div> -->
                       <!-- <div class="item-list">
                         <div class="avatar">
                           <span
@@ -1101,8 +1101,8 @@
                         <button class="btn btn-icon btn-link btn-danger op-8">
                           <i class="fas fa-ban"></i>
                         </button>
-                      </div>
-                      <div class="item-list">
+                      </div> -->
+                      <!-- <div class="item-list">
                         <div class="avatar">
                           <img
                             src="{% static 'web/web_dashboard/assets/img/talha.jpg' %}"
@@ -1120,7 +1120,8 @@
                         <button class="btn btn-icon btn-link btn-danger op-8">
                           <i class="fas fa-ban"></i>
                         </button>
-                      </div>
+                      </div> -->
+                      {% for user in users %}
                       <div class="item-list">
                         <div class="avatar">
                           <img
@@ -1130,8 +1131,8 @@
                           />
                         </div>
                         <div class="info-user ms-3">
-                          <div class="username">Chad</div>
-                          <div class="status">CEO Zeleaf</div>
+                          <div class="username">{{ user.username|title }}</div>
+                          <div class="status">CEO Zelen</div>
                         </div>
                         <button class="btn btn-icon btn-link op-8 me-1">
                           <i class="far fa-envelope"></i>
@@ -1140,7 +1141,8 @@
                           <i class="fas fa-ban"></i>
                         </button>
                       </div>
-                      <div class="item-list">
+                      {% endfor %}
+                      <!-- <div class="item-list">
                         <div class="avatar">
                           <span
                             class="avatar-title rounded-circle border border-white bg-primary"
@@ -1157,8 +1159,8 @@
                         <button class="btn btn-icon btn-link btn-danger op-8">
                           <i class="fas fa-ban"></i>
                         </button>
-                      </div>
-                      <div class="item-list"> -->
+                      </div> -->
+                      <!-- <div class="item-list">
                         <div class="avatar">
                           <span
                             class="avatar-title rounded-circle border border-white bg-secondary"
@@ -1175,7 +1177,7 @@
                         <button class="btn btn-icon btn-link btn-danger op-8">
                           <i class="fas fa-ban"></i>
                         </button>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
