--- a/templates/web/new_profile.html
+++ b/templates/web/new_profile.html
@@ -1,11 +1,12 @@
-{% extends "blog/base.html" %}
+{% extends "web/new_base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
       <div class="media">
         <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
         <div class="media-body">
-          <h2 class="account-heading">{{ user.username }}</h2>
+          <h2 class="account-heading">{{ user.username|title }}</h2>
+          
           <p class="text-secondary">{{ user.email }}</p>
         </div>
       </div>
@@ -13,8 +14,7 @@
           {% csrf_token %}
           <fieldset class="form-group">
               <legend class="border-bottom mb-4">Profile Info</legend>
-              {{ u_form|crispy }}
-              {{ p_form|crispy }}
+              {{ form|crispy }}
           </fieldset>
           <div class="form-group">
               <button class="btn btn-outline-info" type="submit">Update</button>
