--- a/templates/web/fetch_profile.html
+++ b/templates/web/fetch_profile.html
@@ -11,6 +11,6 @@
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit">Fetch Profile</button>
+    <button class="btn btn-primary" type="submit">Fetch Profile</button>
   </form>
 {% endblock content %}
