--- a/templates/web/home.html
+++ b/templates/web/home.html
@@ -51,7 +51,7 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand">Shop Manager</a>
+                    <a href="index.html" class="navbar-brand">Nina Sky</a>
                </div>
 
                <!-- MENU LINKS -->
