--- a/templates/web/profile_approved_email.html
+++ b/templates/web/profile_approved_email.html
@@ -4,7 +4,7 @@
     <title>Profile Approved</title>
 </head>
 <body>
-    <p>Hello {{ user.username }},</p>
+    <p>Hello {{ user }},</p>
     
     <p>Your profile has been approved.</p>
     
