--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -756,7 +756,7 @@
                         <div
                           class="icon-big text-center icon-primary bubble-shadow-small"
                         >
-                          <i class="fas fa-users"></i>
+                          <i class="fas fa-home"></i>
                         </div>
                       </div>
                       <div class="col col-stats ms-3 ms-sm-0">
@@ -798,13 +798,13 @@
                         <div
                           class="icon-big text-center icon-success bubble-shadow-small"
                         >
-                          <i class="fas fa-luggage-cart"></i>
+                          <i class="fas fa-users"></i>
                         </div>
                       </div>
                       <div class="col col-stats ms-3 ms-sm-0">
                         <div class="numbers">
-                          <p class="card-category">Sales</p>
-                          <h4 class="card-title">₦ 1,345</h4>
+                          <p class="card-category">Owing Customers</p>
+                          <h4 class="card-title">{{ no_of_owing_shop_customers }}</h4>
                         </div>
                       </div>
                     </div>
