--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -824,8 +824,8 @@
                       </div>
                       <div class="col col-stats ms-3 ms-sm-0">
                         <div class="numbers">
-                          <p class="card-category">Order</p>
-                          <h4 class="card-title">576</h4>
+                          <p class="card-category">Due Rents</p>
+                          <h4 class="card-title">{{ no_of_due_rents }}</h4>
                         </div>
                       </div>
                     </div>
