--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -762,7 +762,7 @@
                       <div class="col col-stats ms-3 ms-sm-0">
                         <div class="numbers">
                           <p class="card-category">Shops</p>
-                          <h4 class="card-title">1,294</h4>
+                          <h4 class="card-title">{{ no_of_shops }}</h4>
                         </div>
                       </div>
                     </div>
@@ -783,7 +783,7 @@
                       <div class="col col-stats ms-3 ms-sm-0">
                         <div class="numbers">
                           <p class="card-category">Allocated</p>
-                          <h4 class="card-title">700</h4>
+                          <h4 class="card-title">{{ allocated_shops }}</h4>
                         </div>
                       </div>
                     </div>
@@ -803,8 +803,8 @@
                       </div>
                       <div class="col col-stats ms-3 ms-sm-0">
                         <div class="numbers">
-                          <p class="card-category">Owing Customers</p>
-                          <h4 class="card-title">{{ no_of_owing_shop_customers }}</h4>
+                          <p class="card-category">Paid Rents</p>
+                          <h4 class="card-title">{{ no_of_paid_rents }}</h4>
                         </div>
                       </div>
                     </div>
@@ -870,7 +870,7 @@
                 <div class="card card-primary card-round">
                   <div class="card-header">
                     <div class="card-head-row">
-                      <div class="card-title">Daily Sales</div>
+                      <div class="card-title">Annual Rent Fee</div>
                       <div class="card-tools">
                         <div class="dropdown">
                           <button
