--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -900,7 +900,7 @@
                   </div>
                   <div class="card-body pb-0">
                     <div class="mb-4 mt-2">
-                      <h1>₦4,578,567.58</h1>
+                      <h1>₦ {{expected_rent_fees }}</h1>
                     </div>
                     <div class="pull-in">
                       <canvas id="dailySalesChart"></canvas>
