--- a/templates/web/customer_signup.html
+++ b/templates/web/customer_signup.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Signup Page| Customer</title>
+	<title>Signup Page | Customer</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -88,7 +88,7 @@
                     
 
 					<div class="container-login100-form-btn">
-                        <input class="login100-form-btn" type="submit" value="Login">
+                        <input class="login100-form-btn" type="submit" value="Sign Up">
 					</div>
 				</form>
 			</div>
