--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -1220,7 +1220,7 @@
                 <div class="card card-round">
                   <div class="card-header">
                     <div class="card-head-row card-tools-still-right">
-                      <div class="card-title">Transaction History</div>
+                      <div class="card-title">Owing Customers</div>
                       <div class="card-tools">
                         <div class="dropdown">
                           <button
@@ -1253,10 +1253,10 @@
                       <table class="table align-items-center mb-0">
                         <thead class="thead-light">
                           <tr>
-                            <th scope="col">Payment Number</th>
-                            <th scope="col" class="text-end">Date & Time</th>
+                            <th scope="col">Shop Name</th>
+                            <th scope="col" class="text-end">Due Date</th>
                             <th scope="col" class="text-end">Amount</th>
-                            <th scope="col" class="text-end">Status</th>
+                            <th scope="col" class="text-end">Customer</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -1265,7 +1265,7 @@
                               <button
                                 class="btn btn-icon btn-round btn-success btn-sm me-2"
                               >
-                                <i class="fa fa-check"></i>
+                                <i class="fa fa-home"></i>
                               </button>
                               Payment from #10231
                             </th>
@@ -1274,7 +1274,7 @@
                             <td class="text-end">
                               <span class="badge badge-success">Completed</span>
                             </td>
-                          </tr>
+                          <!-- </tr>
                           <tr>
                             <th scope="row">
                               <button
@@ -1364,7 +1364,7 @@
                             <td class="text-end">
                               <span class="badge badge-success">Completed</span>
                             </td>
-                          </tr>
+                          </tr> -->
                         </tbody>
                       </table>
                     </div>
