--- a/templates/web/new_profile.html
+++ b/templates/web/new_profile.html
@@ -5,9 +5,9 @@
       <div class="media">
         <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
         <div class="media-body">
-          <h2 class="account-heading">{{ user.username|title }}</h2>
+          <h2 class="account-heading">{{ profile.user.username|title }}</h2>
           
-          <p class="text-secondary">{{ user.email }}</p>
+          <p class="text-secondary">{{ profile.user.email }}</p>
         </div>
       </div>
       <form method="POST" enctype="multipart/form-data">
