--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
               <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
               <a class="nav-item nav-link" href="{% url 'customer' %}">Customer</a>
               <a class="nav-item nav-link" href="{% url 'shop' %}">Shop</a>
-              <a class="nav-item nav-link" href="{% url 'account' %}">Account</a>
+              <a class="nav-item nav-link" href="">Account</a>
             </div>
             <div class="navbar-nav">
               <form class="logout" action="{% url 'logout' %}" method="POST">
