--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -329,7 +329,7 @@
             <div class="logo-header" data-background-color="dark">
               <a href="index.html" class="logo">
                 <img
-                  src="{% static 'web/web_dashboard/assets/img/kaiadmin/logo_light.svg' %}"
+                  src="{% static 'images/logo.png' %}"
                   alt="navbar brand"
                   class="navbar-brand"
                   height="20"
@@ -664,7 +664,7 @@
               </div>
               <div class="ms-md-auto py-2 py-md-0">
                 <a href="#" class="btn btn-label-info btn-round me-2">Manage</a>
-                <a href="#" class="btn btn-primary btn-round">Add Customer</a>
+                <a href="{% url 'customer-signup' %}" class="btn btn-primary btn-round">Add Customer</a>
               </div>
             </div>
             <div class="row">
