--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -664,7 +664,8 @@
               </div>
               <div class="ms-md-auto py-2 py-md-0">
                 <a href="#" class="btn btn-label-info btn-round me-2">Manage</a>
-                <a href="{% url 'customer-signup' %}" class="btn btn-primary btn-round">Add Customer</a>
+                <!-- <a href="{% url 'customer-signup' %}" class="btn btn-primary btn-round">Add Customer</a> -->
+                <a href="{% url 'customer_form' %}" class="btn btn-primary btn-round">Add Customer</a>
               </div>
             </div>
             <div class="row">
