--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -1212,7 +1212,7 @@
                             <td class="text-end">{{ customer.date_due }}</td>
                             <td class="text-end">₦ {{ customer.shop.price }}</td>
                             <td class="text-end">
-                              <span class="text-end">{{ customer.customer.username|capfirst }}</span>
+                              <span class="text-end">{{ customer.customer.name|capfirst }}</span>
                             </td>
                           </tr>
                           {% endfor %}
