--- a/templates/web/home.html
+++ b/templates/web/home.html
@@ -64,7 +64,7 @@
                          <li><a href="#contact" class="smoothScroll">Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="#"><span>info@ninasky.com</span></a></li>
+                         <li><a href="{% url 'dashboard' %}"><span>Staff</span></a></li>
                     </ul>
                </div>
 
