--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,11 @@
     {% if messages %}
 
     {% for message in messages %}
-     {{ message }}
+     <!-- {{ message }} -->
+     <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+      <strong>{{ message }}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     {% endfor %}
     {% endif  %}
 
