--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <img src="{% static 'images/logo.png' %}" class="card-img-top mx-auto" style="width: 7%;"  alt="Nina Sky">
+          <img src="{% static 'images/logo-removebg-preview.png' %}" class="card-img-top mx-auto" style="width: 7%;"  alt="Nina Sky">
           <a class="navbar-brand" href="" style="color: blue">Shop Manager</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,9 +27,9 @@
             {% if user.is_authenticated %}
             <div class="navbar-nav me-auto">
 
-              <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
+              <a class="nav-item nav-link" href="{% url 'dashboard' %}">Dashboard</a>
               <a class="nav-item nav-link" href="{% url 'customer' %}">Customer</a>
-              <a class="nav-item nav-link" href="{% url 'shop' %}">Shop</a>
+              <a class="nav-item nav-link" href="{% url 'all-shops' %}">Shop</a>
               <a class="nav-item nav-link" href="">Account</a>
             </div>
             <div class="navbar-nav">
