--- a/templates/shop/edit_shop_form.html
+++ b/templates/shop/edit_shop_form.html
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="card mx-auto">
-            <div class="card-header"><h3>Shop Creation</h3></div>
+            <div class="card-header"><h3>Shop Update</h3></div>
             <div class="card-body">
                 <h5 class="card-title">Master Record</h5>
                 <p class="card-text">
