--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -50,9 +50,17 @@
         <div class="sidebar-logo">
           <!-- Logo Header -->
           <div class="logo-header" data-background-color="dark">
-            <a href="index.html" class="logo">
+            <!-- <a href="index.html" class="logo">
               <img
                 src="{% static 'web/web_dashboard/assets/img/kaiadmin/logo_light.svg' %}"
+                alt="navbar brand"
+                class="navbar-brand"
+                height="20"
+              />
+            </a> -->
+            <a href="index.html" class="logo">
+              <img
+                src="{% static 'images/logo-removebg-preview.png' %}"
                 alt="navbar brand"
                 class="navbar-brand"
                 height="20"
@@ -674,10 +682,10 @@
                 <h6 class="op-7 mb-2">Nina Sky Innovation Limited Admin Dashboard</h6>
               </div>
               <div class="ms-md-auto py-2 py-md-0">
-                <a href="#" class="btn btn-label-info btn-round me-2">Manage</a>
+                <a href="{% url 'customer' %}" class="btn btn-label-info btn-round me-2">Manage</a>
                 <!-- <a href="{% url 'customer-signup' %}" class="btn btn-primary btn-round">Add Customer</a> -->
                 <!-- <a href="{% url 'customer_form' %}" class="btn btn-primary btn-round">Add Customer</a> -->
-                <a href="{% url 'create-customer' %}" class="btn btn-primary btn-round">Add Customer</a>
+                <a href="{% url 'customer_form' %}" class="btn btn-primary btn-round">Add Customer</a>
               </div>
             </div>
             <div class="row">
