--- a/templates/customer/customer_admin_update_customer_form.html
+++ b/templates/customer/customer_admin_update_customer_form.html
@@ -38,7 +38,7 @@
         </div>
         <div class="col-md-9">
             <div class="card mx-auto">
-                <div class="card-header">Customer Update Page</div>
+                <div class="card-header"><strong>Customer Update Page</strong></div>
                 <div class="card-body">
                     <h5 class="card-title">Master Record</h5>
                     <p class="card-text">
