--- a/templates/customer/customer.html
+++ b/templates/customer/customer.html
@@ -32,7 +32,7 @@
                                 <td>Email</td>
                                 <td>Phone No</td>
                                  <td>Status</td>
-                                <td>  <a href="form/" class="btn btn-success">Add Customer</a></td>
+                                <td>  <a href="form/" class="btn btn-success btn-md">Add Customer</a></td>
                             </tr>
                         </thead>
     
