--- a/templates/customer/customer_admin_update_customer_form.html
+++ b/templates/customer/customer_admin_update_customer_form.html
@@ -80,7 +80,7 @@
                             <div class="col-md-4">
                                 {{form.state|as_crispy_field}}
                             </div>
-                        
+                            
                         </div>
 
                         <div class="row">
@@ -90,7 +90,12 @@
                             
                             <div class="col-md-2">
                                 {{form.status|as_crispy_field}}
-                            </div>    
+                            </div> 
+
+                            <div class="col-md-2">
+                                {{form.approval|as_crispy_field}}
+                            </div>   
+                            
                             
                            
                         
