--- a/templates/shop/myshop.html
+++ b/templates/shop/myshop.html
@@ -47,14 +47,22 @@
                         <td>{{shop.type}}</td>
                         <td>{{shop.price}}</td>
                         <td>{{shop.size}}</td>
-                        <td>{{ shop.approval }}</td>
+                        {% if shop.is_approved%}
+                        <td>Approved</td>
+                        {% else %}
+                        <td>Pending</td>
+                        {% endif %}
+                        
 
                         <!-- <td>{{shop.shop_rent}}</td> -->
+                         {% if user.is_staff %}
                         <td>
                          <a href="{% url 'shop-edit' shop.no %}" class="btn text-secondary px-0">
                          EDIT
                          </a>
                         </td>
+                        {% endif %}
+
                         </tr>
                         {% endfor %}
                         
