--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -819,7 +819,9 @@
                               <th scope="row">{{ customer.no }}</th>
                               <td>{{ customer.name }}</td>
                               <td>{{ customer.phone }}</td>
+                              {% if customer.is_staff %}
                               <td><a href="{% url 'update-customer-form' customer.no %}">EDIT</a></td>
+                              {% endif %}
                               <!-- <td>@mdo</td> -->
                             </tr>
                             {% endfor %}
