--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -11,7 +11,7 @@
     />
     <link
       rel="icon"
-      href="{% static 'web/web_dashboard/assets/img/kaiadmin/favicon.ico' %}"
+      href="{% static 'web/css/favicon.ico' %}"
       type="image/x-icon"
     />
 
